# LibrarySoft

./: .gitignore  CMakeLists.txt  FormFunctions.c  FormFunctions.h  Librarysoft.dev  Librarysoft.layout  Librarysoft.rc  Librarysoft_private.h  Librarysoft_private.rc  Librarysoft_private.res  Lists.c  Lists.h  Makefile.win  Object.c  Object.h  README.md  main.c  objects.c  resource.h
Headers/: formFunctions.h  lists.h  objects.h  resource.h
res/: Application.manifest  Librarysoft.rc
